# Rustle

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md  Rocket.toml  diesel.toml  docker-compose.dev.yml  start_required_services.sh
backend/: .gitignore  Cargo.toml  Dockerfile.prod  README.md  Rocket.toml  docker-compose.dev.yml  docker-compose.prod.yml
backend/migrations/0002_create_workspaces_table/: down.sql
backend/migrations/0003_create_projects_table/: up.sql
backend/src/: api.rs  auth.rs  main.rs  schema.rs
backend/src/cache/: projects.rs  users.rs
backend/src/cookies/: mod.rs
backend/src/database/: projects.rs
backend/src/database/pagination/: mod.rs  request.rs
backend/src/database/pagination/queries/: mod.rs
backend/src/email/: smtp.rs
backend/src/email/assets/elements/: footer.html  invitation.html  test.html
backend/src/email/templates/: invitation.rs
backend/src/forms/: mod.rs  projects.rs
backend/src/models/: users.rs
backend/src/policies/: projects.rs  users.rs  workspaces.rs
backend/src/routes/: mod.rs  projects.rs  users.rs
backend/src/routes/projects/: put.rs
backend/src/routes/users/: delete.rs  get.rs
backend/src/routes/workspaces/: delete.rs  get.rs
backend/src/tests/: mod.rs  users.rs
backend/src/tests/projects/: adding_and_updating.rs  getting_projects.rs  member_management.rs
backend/src/tests/users/: deleting_users.rs  injecting_users.rs  login_logout.rs
backend/src/tests/workspaces/: member_management.rs
db/: readme.md  rustle.db  rustle.db-shm  rustle.db-wal
(+141 files in other folders)
