[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
rand = "0.8"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dependencies.diesel_migrations]
version = "2.0.0"