[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = [
    "postgres",
    "chrono",
    "serde_json",
    "uuid",
] }
dotenv = "0.15"
jsonwebtoken = "8.1"
lettre = "0.11"
rand = "0.8"
redis = { version = "0.23", features = ["tokio-comp"] }
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json", "uuid", "secrets"] }
rocket_cors = "0.6.0"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [
    "diesel_postgres_pool",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.44.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }

[dependencies.diesel_migrations]
version = "2.0.0"
